Creando vista y update post

--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
   <div class="d-flex h-100 min-vh-100 justify-content-center">
     <app-root></app-root>
   </div>
+  <script src="https://kit.fontawesome.com/6224b7d1f0.js" crossorigin="anonymous"></script>
 </body>
 </html>
