--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <script type="text/javascript" src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap5.min.js"></script>
 </head>
 <body>
-  <div class="d-flex h-100 min-vh-100 justify-content-center">
+  <div>
     <app-root></app-root>
   </div>
   <script src="https://kit.fontawesome.com/6224b7d1f0.js" crossorigin="anonymous"></script>
